@@ -218,8 +218,8 @@ for ($i = 0; $i < $nr_daemon; ++$i) {
     }
 }
 
-print "Sleeping 60 seconds to allow task to complete\n";
-sleep (60);
+print "Sleeping 30 seconds to allow task to complete\n";
+sleep (30);
 
 # Invoke executor - stop the application -.
 print "Invoking executor - stop the application -\n";
